[gd_scene load_steps=20 format=3 uid="uid://3u5ru68ope1e"]

[ext_resource type="Script" path="res://Scene/InteractiveObject/BreakableObject/LittleJarre.gd" id="1_btvjh"]
[ext_resource type="Texture2D" uid="uid://bcemt1qt8p64c" path="res://Scene/InteractiveObject/Sprite/PyramideLittleJarre_SpriteSheet.png" id="1_e621p"]
[ext_resource type="Script" path="res://StateMachine/StateMachine.gd" id="2_6dcr3"]
[ext_resource type="Script" path="res://StateMachine/State.gd" id="3_hhdda"]
[ext_resource type="PackedScene" uid="uid://csvidkcdr12dq" path="res://Behaviour/DropperBehaviour.tscn" id="5_3n7h4"]
[ext_resource type="Script" path="res://Scene/InteractiveObject/BreakableObject/BreakState.gd" id="5_63hmw"]
[ext_resource type="AudioStream" uid="uid://cpxqbwhifqinp" path="res://Audio/Vase_Breaking.mp3" id="6_e1g1v"]
[ext_resource type="Script" path="res://Resource/DropWeightData.gd" id="6_fc0w3"]
[ext_resource type="PackedScene" uid="uid://bcxmkrqbwgqdv" path="res://Scene/InteractiveObject/CollectableObject/BouleDeVie.tscn" id="7_3cfsc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3ud54"]
atlas = ExtResource("1_e621p")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6a832"]
atlas = ExtResource("1_e621p")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_27y8u"]
atlas = ExtResource("1_e621p")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihygn"]
atlas = ExtResource("1_e621p")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhtll"]
atlas = ExtResource("1_e621p")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_88blp"]
atlas = ExtResource("1_e621p")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_bsgb3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ud54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6a832")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27y8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihygn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhtll")
}],
"loop": false,
"name": &"PyramideBreak",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_88blp")
}],
"loop": false,
"name": &"PyramideIdle",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1w7lk"]
radius = 11.0

[sub_resource type="Resource" id="Resource_ity76"]
script = ExtResource("6_fc0w3")
weight = 2.0

[sub_resource type="Resource" id="Resource_ebwb6"]
script = ExtResource("6_fc0w3")
item_data = ExtResource("7_3cfsc")
weight = 1.0

[node name="LittleJarre" type="StaticBody2D" groups=["InteractiveObject"]]
script = ExtResource("1_btvjh")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bsgb3")
animation = &"PyramideIdle"
metadata/_edit_lock_ = true

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 4)
shape = SubResource("CircleShape2D_1w7lk")
metadata/_edit_lock_ = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_e1g1v")
volume_db = -5.0
attenuation = 2.0

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_6dcr3")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_hhdda")

[node name="Break" type="Node" parent="StateMachine"]
script = ExtResource("5_63hmw")

[node name="Broken" type="Node" parent="StateMachine"]
script = ExtResource("3_hhdda")

[node name="DropperBehaviour" parent="." instance=ExtResource("5_3n7h4")]
item_drop_weight_array = Array[ExtResource("6_fc0w3")]([SubResource("Resource_ity76"), SubResource("Resource_ebwb6")])
